src/test-c/test_fail/error/def_func_var.c
int main(int i){
    int i;
    i=0;
}